--- a/rca/static_src/sass/components/_pagination.scss
+++ b/rca/static_src/sass/components/_pagination.scss
@@ -47,6 +47,11 @@
         @include hidden();
     }
 
+    &__button-icon {
+        height: $gutter;
+        width: $gutter;
+    }
+
     /** Colours dependant on bg colour */
 
     .bg--light & {
