--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--project.html
@@ -49,7 +49,7 @@
     {% if page.specification_document %}
         <div class="key-details__section key-details__section--action">
             <a class="key-details__link link link--secondary link--download" href="{{ page.specification_document.url }}">
-                <span class="link__label">Download the full {{ page.specification_document }} programme specification</span>
+                <span class="link__label">Project download</span>
                 <svg width="8" height="12" class="link__icon" aria-hidden="true"><use xlink:href="#download"></use></svg>
             </a>
         </div>
