--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -65,6 +65,7 @@
 @import 'components/modal-launcher';
 @import 'components/nav';
 @import 'components/news';
+@import 'components/no-results';
 @import 'components/overview';
 @import 'components/outdated-banner';
 @import 'components/page';
