--- a/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
+++ b/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
@@ -1,9 +1,14 @@
-<ul class="breadcrumb">
-    {% for item in breadcrumb %}
-        <li class="breadcrumb__item">
-            <a class="breadcrumb__item-link" href="{{ item.link }}">
-                {{ item.label }}
-            </a>
-        </li>
-    {% endfor %}
-</ul>
+{% load wagtailcore_tags %}
+
+{% if page.get_ancestors|length > 2 %}
+    <ul class="breadcrumb">
+        {% for ancestor_page in page.get_ancestors %}
+            {% if not ancestor_page.is_root %}
+                    <li class="breadcrumb__item">
+                        <a class="breadcrumb__item-link" href="{% pageurl ancestor_page %}" title="{{ ancestor_page.title }}">{{ ancestor_page.title }}
+                        </a>
+                    </li>
+            {% endif %}
+        {% endfor %}
+    </ul>
+{% endif %}
