Address line height tighten - new var

--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details--centre.html
@@ -14,7 +14,7 @@
                     {% endfor %}
                 {% endif %}
                 {% if page.centre_address %}
-                    <li class="key-details__list-item">
+                    <li class="key-details__list-item key-details__list-item--tight">
                         <p>{{ page.centre_address }}</p>
                     </li>
                 {% endif %}
