--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -41,6 +41,7 @@ $weight--normal: 500;
 
 // Line heights
 $line-height-large: 122%;
+$line-height-tight: 17px;
 $base-line-height: 20px;
 
 // Font sizes
