--- a/rca/static_src/sass/components/_profile-detail.scss
+++ b/rca/static_src/sass/components/_profile-detail.scss
@@ -8,13 +8,15 @@
         display: block;
         color: currentColor;
 
-        &:hover {
-            #{$root}__image {
-                opacity: 0.8;
-            }
+        &--link {
+            &:hover {
+                #{$root}__image {
+                    opacity: 0.8;
+                }
 
-            #{$root}__heading {
-                @include underline-hover();
+                #{$root}__heading {
+                    @include underline-hover();
+                }
             }
         }
     }
