--- a/rca/static_src/sass/components/_profile-detail.scss
+++ b/rca/static_src/sass/components/_profile-detail.scss
@@ -188,6 +188,7 @@
 
             @include media-query(large) {
                 grid-column: 2 / span 2;
+                padding-right: 50%;
             }
         }
 
