--- a/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
+++ b/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
@@ -1,14 +1,11 @@
 {% load wagtailcore_tags %}
-
-{% if page.get_ancestors|length > 1 %}
-    <ul class="breadcrumb">
-        {% for ancestor_page in page.get_ancestors %}
-            {% if not ancestor_page.is_root %}
-                    <li class="breadcrumb__item">
-                        <a class="breadcrumb__item-link" href="{% pageurl ancestor_page %}" title="{{ ancestor_page.title }}">{{ ancestor_page.title }}
-                        </a>
-                    </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
-{% endif %}
+<ul class="breadcrumb">
+    {% for ancestor_page in page.get_ancestors %}
+        {% if not ancestor_page.is_root and ancestor_page.title != 'Home' %}
+                <li class="breadcrumb__item">
+                    <a class="breadcrumb__item-link" href="{% pageurl ancestor_page %}" title="{{ ancestor_page.title }}">{{ ancestor_page.title }}
+                    </a>
+                </li>
+        {% endif %}
+    {% endfor %}
+</ul>
