Making external links display: inline

--- a/rca/static_src/sass/components/_link.scss
+++ b/rca/static_src/sass/components/_link.scss
@@ -274,6 +274,7 @@
 
     .related-links__item & {
         font-family: $font--primary;
+        display: inline;
 
         @include media-query(large) {
             font-family: $font--secondary;
