--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -53,6 +53,7 @@
 @import 'components/job-titles';
 @import 'components/image';
 @import 'components/image-caption-link';
+@import 'components/image-info';
 @import 'components/introduction';
 @import 'components/key-details';
 @import 'components/link';
