--- a/rca/project_styleguide/templates/patterns/molecules/hero-action-pane/hero-action-pane.html
+++ b/rca/project_styleguide/templates/patterns/molecules/hero-action-pane/hero-action-pane.html
@@ -3,13 +3,8 @@
 
 <div class="hero-action-pane grid">
 
-    <div class="hero-action-pane__credit">
-    {% if page.hero_image_credit %}
-        {{ page.hero_image_credit }}
-    {% else %}
-        <i>{{ page.hero_image.title }}</i>{% if page.hero_image.creator %}, {{ page.hero_image.creator }}{% endif %}
-        {% if page.hero_image.photographer %}, Photo: {{ page.hero_image.photographer }}{% endif %}
-    {% endif %}
+    <div class="hero-action-pane__credit" data-parallax data-rellax-speed="-1">
+        {% include 'patterns/atoms/image-info/image-info.html' with credit=page.hero_image_credit item=page.hero_image %}
     </div>
 
     {% if page.hero_cta_url %}
