Add related pages to the anchor nav

--- a/rca/project_styleguide/templates/patterns/organisms/index-module/index-module.html
+++ b/rca/project_styleguide/templates/patterns/organisms/index-module/index-module.html
@@ -1,4 +1,4 @@
-<div class="index-module">
+<div class="index-module" id="{{ id }}">
     <div class="index-module__container grid">
         <div class="index-module__header">
             <h2 class="index-module__heading heading heading--two">{{ title }}</h2>
