--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -74,7 +74,7 @@
             {% endif %}
 
             {% if related_pages %}
-                <section class="section bg bg--dark" id="index">
+                <section class="section bg bg--dark" id="index-module">
                     <div class="section__row section__row--first section__row--last-large">
                         {% include "patterns/organisms/index-module/index-module.html" with items=related_pages.items title=related_pages.title id=page.related_pages_title|slugify %}
 
