Programme detail - overview tab yaml and programme detail title fix

--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -1,5 +1,5 @@
 {% if alumni_links %}
-    <div class="section__row grid featured-alumni">
+    <div class="section__row section__row--last grid featured-alumni">
         <h2 class="featured-alumni__heading heading heading--four">{{ title }}</h2>
         <div class="featured-alumni__introduction">
             <p class="introduction">{{ introduction }}</p>
