--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -82,7 +82,7 @@
                     <div class="section__row section__row--first-small section__row--last-small grid">
                         <div class="results-total heading heading--four layout__start-one layout__span-two layout__@large-start-two">
                             <span class="results-total__type">Projects</span>
-                            <span class="results-total__number">236</span>
+                            <span class="results-total__number">{{ results_count }}</span>
                         </div>
                     </div>
                 {% endif %}
@@ -94,12 +94,12 @@
                     </div>
                 {% endif %}
 
-                <div class="section__row {% if results %}section__row--last-small {% else %}section__row--first-small section__row--last-large{% endif %} grid">
-                    <div class="results {% if not results %}results--no-results{% endif %} layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
+                <div class="section__row {% if page.results %}section__row--last-small {% else %}section__row--first-small section__row--last-large{% endif %} grid">
+                    <div class="results {% if not page.results %}results--no-results{% endif %} layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
                         {% if results %}
                             {% for item in results %}
                                 <div class="results__item layout__span-two layout__@medium-span-one">
-                                    {% include "patterns/molecules/card/card--project.html" %}
+                                    {% include "patterns/molecules/card/card--project.html" with card=item %}
                                 </div>
                             {% endfor %}
                         {% else %}
