Ensure the query params are apended to the pagination links

--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -79,6 +79,7 @@
                 {% endif %}
 
                 {% if projects %}
+                {{extra_url_params}}
                     <div class="section__row section__row--last-large research-highlights">
                         <div class="section__header grid">
                             <h2 class="section__heading section__heading--primary heading heading--four">
