--- a/rca/project_styleguide/templates/patterns/molecules/pagination/pagination.html
+++ b/rca/project_styleguide/templates/patterns/molecules/pagination/pagination.html
@@ -1,9 +1,9 @@
-{% if paginator_page.paginator.num_pages > 1 %}
+{% if subpages.paginator.num_pages > 1 %}
 <nav class="pagination" aria-label="Pagination">
     <ul class="pagination__container body body--two">
-        {% if paginator_page.has_previous %}
+        {% if subpages.has_previous %}
             <li class="pagination__button pagination__button--prev">
-                <a class="pagination__button-link" href="?page={{ paginator_page.previous_page_number }}{% if search_query %}&amp;query={{ search_query|urlencode }}{% endif %}{% if extra_url_params %}&amp;{{ extra_url_params }}{% endif %}" class="previous">
+                <a class="pagination__button-link" href="?page={{ subpages.previous_page_number }}&{% for value in extra_query_params %}{{ value }}&amp;{% endfor %}" class="previous">
                     <span class="pagination__button-label">previous</span>
                     <svg width="23" height="23" class="pagination__button-icon" aria-hidden="true">
                         <use xlink:href="#arrow-left"></use>
@@ -11,26 +11,26 @@
                 </a>
             </li>
         {% endif %}
+        {% for i in subpages.paginator.page_range|slice:"3" %}
+            <li class="pagination__item">
+                <a href="?page={{i}}&{% for value in extra_query_params %}{{ value }}&amp;{% endfor %}" class="pagination__link">{{i}}</a>
+            </li>
+        {% endfor %}
+        <br>
 
-        <li class="pagination__item pagination__item--current">
-            {{ paginator_page.number }}
-        </li>
-        <li class="pagination__item">
-            <a href="#" class="pagination__link">2</a>
-        </li>
-        <li class="pagination__item">
-            <a href="#" class="pagination__link">3</a>
-        </li>
-        <li class="pagination__ellipsis">
-            &hellip;
-        </li>
-        <li class="pagination__item">
-            <a href="#" class="pagination__link">6</a>
-        </li>
-
-        {% if paginator_page.has_next %}
+        {% if subpages.paginator.page_range|last > 3 %}
+            <li class="pagination__item">
+                ...
+            </li>
+            {% for i in subpages.paginator.page_range|slice:"-3:" %}
+                <li class="pagination__item">
+                    <a href="?page={{i}}&{% for value in extra_query_params %}{{ value }}&amp;{% endfor %}" class="pagination__link">{{i}}</a>
+                </li>
+            {% endfor %}
+        {% endif %}
+        {% if subpages.has_next %}
             <li class="pagination__button pagination__button--next">
-                <a class="pagination__button-link" href="?page={{ paginator_page.next_page_number }}{% if search_query %}&amp;query={{ search_query|urlencode }}{% endif %}{% if extra_url_params %}&amp;{{ extra_url_params }}{% endif %}" class="next">
+                <a class="pagination__button-link" href="?page={{ subpages.next_page_number }}&{% for value in extra_query_params %}{{ value }}&amp;{% endfor %}" class="next">
                     <span class="pagination__button-label">next</span>
                     <svg width="23" height="23" class="pagination__button-icon" aria-hidden="true">
                         <use xlink:href="#arrow-right"></use>
