--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -113,11 +113,10 @@
                 {% if results %}
                     <div class="section__row section__row--last grid">
                         <div class="layout__span-two layout__@large-span-one layout__start-one layout__@large-start-three">
-                            {% include "patterns/molecules/pagination/pagination.html" %}
+                            {% include "patterns/molecules/pagination/pagination.html" with subpages=results %}
                         </div>
                     </div>
                 {% endif %}
-
             </section>
 
             
